
* New things added:

Added machines Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
Added Memory Cheat feature: useful to find counters of energy, bombs, ammo or any other cheat in a game
Added Find text string on memory menu
Added Quicksave screen function
Added setting to disable persistent writes on Z88 Cards

* Improvements:

Allow save screen to bmp for most machines
Allow hotswap to Pentagon and to Spectrum +3
Allow hotswap from Spectrum 128 to Spectrum +3
Improve Azimuth warning on External Audio Source Window
Added Flash Color mode
Allow to not save snapshot when exiting ZEsarUX
Allow to define Left Alt, Left Ctrl, Left Shift or TAB as Joystick Fire action
Allow to change current tape read position on Input Tape Viewer for .tap files
Allow loading a 8kb rom in ZX80 (for example the ZX81 rom, like an upgraded ZX80 to ZX81)
Allow magnify sprites on View Sprites
Improve compilation: settings --enable-memptr --enable-visualmem --enable-cpustats are enabled by default on ./configure
Improved debug cpu history: allow to change memory pointer to the PC register show in history
Improved Hexadecimal editor:
- Now the data is refreshed when the window has the focus too
- Now the memory pointer can follow a expression (CPU register for example)

Improved ZX Vision:
- More GUI improvements following more guidelines from the (retro)-specification IBM CUA
- Menus show previous menus when selecting submenus
- When selecting ZX Vision Style, it is applied on moving cursor
- Improve cursor movement on menus when pressing PgDn/PgUp
- Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
- Process switcher is located at bottom-left part of the display by default

Improved ZX Desktop:
- Allow to enable/disable upper and lower buttons independently

* Fixes:

Remove buffer full indicator when pressing shift+e on External Audio Source window
Fixed TZX autload as Real Tape on Spectrum +3