@@ -7,6 +7,7 @@ Added Memory Cheat feature: useful to find counters of energy, bombs, ammo or an
 Added Find text string on memory menu
 Added Quicksave screen function
 Added setting to disable persistent writes on Z88 Cards
+Added CPC Additional ROMS emulation
 
 * Improvements:
 
